--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row" id="row-primary">
             <div class="col-xs-12" id="schedule">
                 <div class="panel panel-default">
@@ -54,11 +54,12 @@
 
         <div class="row" id="row-secondary">
             <div class="col-xs-12" id="form">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
+                <div class="panel panel-default" id="form-panel">
+                  <div class="panel-heading" id="form-heading">
+                      <h3 class="panel-title" id="form-title"></h3>
 
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="form-body">
                         <div class="form-group">
                             <label for="input-train-name">Train Name</label>
                             <input type="text" class="form-control" id="input-train-name" required>
